--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
 
   "env": {
     "SESSION_ID": {
-      "description": "E9JCTLJD#PkcbAaPa_bXWqtKIi7xRDUb2O64tZT0BHcm2xO3SMXg",
+      "description": "lw4H2DAD#e7W5lyXxZKpVRoJHWXdMuyvw1xXwYQeQPVugLkBwRUA,
       "required": true
     },  
 
