--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
 
   "env": {
     "SESSION_ID": {
-      "description": "lw4H2DAD#e7W5lyXxZKpVRoJHWXdMuyvw1xXwYQeQPVugLkBwRUA",
+      "description": "",
       "required": true
     },  
 
