--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
 
   "env": {
     "SESSION_ID": {
-      "description": "",
+      "description": "levanter_21a33b10a38af461ca185df60c6045787",
       "required": true
     },  
 
