--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "short-video-downloader",
+  "name": "wa-dp-downloader",
   "version": "1.0.0",
+  "description": "WhatsApp Profile Picture Downloader - Free & Open Source",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@whiskeysockets/baileys": "^6.7.0",
+    "axios": "^1.7.0",
     "express": "^4.18.2"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
