--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
+
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.7.0",
-    "axios": "^1.7.0",
-    "express": "^4.18.2"
-  },
+    "express": "^4.18.2",
+    "axios": "^1.7.0"
+  }
+
   "engines": {
     "node": ">=18"
   }
