--- a/package.json
+++ b/package.json
@@ -1,19 +1,10 @@
 {
   "name": "wa-dp-downloader",
   "version": "1.0.0",
-  "description": "WhatsApp Profile Picture Downloader - Free & Open Source",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
-
+  "scripts": { "start": "node server.js" },
   "dependencies": {
     "express": "^4.18.2",
     "axios": "^1.7.0"
-  }
-
-  "engines": {
-    "node": ">=18"
   }
 }
