--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,12 @@
 {
   "version": 2,
-  "builds": [{ "src": "server.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "server.js" }]
+  "builds": [
+    { "src": "server.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "server.js" }
+  ],
+  "functions": {
+    "server.js": { "memory": 1024, "maxDuration": 60 }
+  }
 }
