--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
-  "name": "wa-dp-downloader",
-  "version": "1.0.0",
+  "name": "adult-video-downloader-pro",
+  "version": "2.0.0",
+  "description": "Ultimate 18+ Video Downloader - 50+ Sites, 100% Success",
   "main": "server.js",
-  "scripts": { "start": "node server.js" },
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "express": "^4.18.2",
-    "axios": "^1.7.0"
+    "axios": "^1.7.0",
+    "cheerio": "^1.0.0-rc.12",
+    "puppeteer": "^22.0.0",
+    "fluent-ffmpeg": "^2.1.2",
+    "user-agents": "^1.0.1400"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
