--- a/package.json
+++ b/package.json
@@ -1,20 +1,13 @@
 {
-  "name": "adult-video-downloader-pro",
-  "version": "2.0.0",
-  "description": "Ultimate 18+ Video Downloader - 50+ Sites, 100% Success",
-  "main": "server.js",
+  "name": "adult-downloader-lite",
+  "version": "1.0.0",
+  "description": "18+ Video Downloader - Vercel Only, No Error",
+  "main": "api/download.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "vercel dev"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "axios": "^1.7.0",
-    "cheerio": "^1.0.0-rc.12",
-    "puppeteer": "^22.0.0",
-    "fluent-ffmpeg": "^2.1.2",
-    "user-agents": "^1.0.1400"
-  },
-  "engines": {
-    "node": ">=18"
+    "cheerio": "^1.0.0-rc.12"
   }
 }
